# Multiple_Service_Robot

./: Readme.md
Firebase/: fb_listner.py  fb_talker.py  firebase.py  mca_key.json
amcl/examples/: amcl_diff.launch
bringup/: 99-turtlebot3-cdc.rules  CMakeList.txt  CMakeLists.txt  package.xml  setup.py
bringup/launch/: core.launch  lidar_X4.launch  model.launch  remote.launch  robot.launch
bringup/launch/includes/: description.launch.xml
bringup/scripts/: create_udev_rules.sh
bringup/src/: diagnostics.cpp
bringup/srv/: ResetOdom.srv
description/: CMakeLists.txt  package.xml
description/meshes/base/: body.stl  body_1.STL  body_2.stl  nbody.STL
description/meshes/sensor/: imu.stl  ydlidar.stl
description/meshes/wheel/: left_wheel.stl
description/urdf/: urdf.xacro
firebase/: firebase.py
localization/: package.xml
localization/config/: ekf_localization.yaml
localization/launch/: ekf_localization.launch
navigation/: CMakeLists.txt  package.xml
navigation/launch/: amcl.launch  move_base.launch  navigation.launch
navigation/maps/: hotel.pgm  hotel.yaml  mca.pgm  mca.yaml  serving.pgm  serving.yaml
navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
navigation/rviz/: navigation.rviz
navigation/src/: auto_clear_costmap_node.cpp
set/: CMakeLists.txt  package.xml  setup.py
set/launch/: robot.launch  robot_main.launch
set/nodes/: firebase  loadmap  mainService  mca_key.json  moduleLoder  rotate
set/param/: target_pose.yaml
set/src/: modeChange.cpp  navPoseSet.cpp  robot.cpp  robotMain.cpp  robot_main.cpp  robot_service.cpp  robot_ultra.cpp  ros-firebase.py  service.cpp
set/srv/: data.srv  setlocation.srv
slam/: CMakeLists.txt  package.xml
slam/config/: gmapping_params.yaml  robot.lua
slam/launch/: cartographer.launch  gmapping.launch  slam.launch
slam/rviz/: cartographer.rviz  gmapping.rviz
src/: robotMain.cpp
teleop/: CMakeLists.txt  package.xml  setup.py
teleop/launch/: teleop_key.launch
teleop/nodes/: teleop_key
