<?xml version="1.0"?>
<package format="2">
  <name>bringup</name>
  <version>0.1.0</version>
  <description>
    Bringup
  </description>
  <license>Apache 2.0</license>
  <author>Hyun</author>
  <maintainer gmail="as379907as@gmail.com">Hyun</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <exec_depend>description</exec_depend>
  <exec_depend>teleop</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>ydlidar_ros_driver</exec_depend>
</package>