<?xml version="1.0"?>
<package format="2">
  <name>description</name>
  <version>0.0.1</version>
  <description>
    Description for robot.
  </description>
  <license>Apache 2.0</license>
  <author email="as379907as@gmail.com">Hyun</author>
  <maintainer email="as379907as@gmail.com">Hyun</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
