<?xml version="1.0"?>
<package format="2">
  <name>set</name>
  <version>0.0.1</version>

  <description>Set for robot.</description>

  <maintainer email="as379907as@gmail.com">hyun</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_generation</exec_depend>

  <build_depend>message_runtime</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <build_depend>move_base_msgs</build_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <exec_depend>move_base_msgs</exec_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>turtlebot3_msgs</build_depend>
  <build_export_depend>turtlebot3_msgs</build_export_depend>
  <exec_depend>turtlebot3_msgs</exec_depend>

  <build_depend>std_srvs</build_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>std_srvs</exec_depend>

  <build_depend>tf</build_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>tf</exec_depend>

  <export></export>
</package>