<?xml version="1.0"?>
<package format="2">
  <name>teleop</name>
  <version>0.0.1</version>
  <description>
    Teleop
  </description>
  <author>Hyun</author>
  <maintainer email="as379907as@gmail.com">Hyun</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>